--- a/assets/scss/sections/_contact.scss
+++ b/assets/scss/sections/_contact.scss
@@ -130,7 +130,8 @@
             border: 1.2px solid darken($color-main-dark, 45);
             transition: border-color .4s;
             outline: none;
-
+box-shadow: none;
+border-radius: 0;
             @include lg-md {
                 width: 300px;
             }
