--- a/assets/scss/sections/_contact.scss
+++ b/assets/scss/sections/_contact.scss
@@ -12,7 +12,8 @@
         &__title {
             @extend %title-section;
         }
-        &__subtitle{
+
+        &__subtitle {
             @include sm {
                 font-size: .875rem;
             }
@@ -27,6 +28,7 @@
         @include lg-md {
             justify-content: center;
         }
+
         @include md {
             justify-content: center;
             flex-direction: column;
@@ -35,57 +37,66 @@
         &__information {
             text-align: left;
             width: 240px;
+
             @include md {
-               display: flex;
-               flex-wrap: wrap;
-               align-items: center;
-               text-align: center;
-               width: 100%;
-              padding-bottom: 10px;
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                text-align: center;
+                width: 100%;
+                padding-bottom: 10px;
             }
+
             @include sm {
                 align-items: center;
                 text-align: center;
                 width: 100%;
-               padding-bottom: 10px;
-             }
+                padding-bottom: 10px;
+            }
+
             &-item {
                 padding: 0 $gap * 1.5;
                 position: relative;
+
                 @include md {
                     width: 190px;
                     padding: 0 0;
                     margin: 0 auto;
-                 }
-                 @include sm {
+                }
+
+                @include sm {
                     width: 100%;
                     padding: 0 0;
                     margin: 20px auto;
-                 }
+                }
+
                 &:not(:first-child) {
                     margin: 30px 0;
+
                     @include md {
-                       margin: 15px 0;
-                     }
+                        margin: 15px 0;
+                    }
                 }
 
                 h3 {
                     text-transform: uppercase;
                     padding-bottom: $gap + 5;
                     font-size: .875rem;
+
                     @include md {
                         padding-bottom: $gap;
                         font-size: .775rem;
-                      }
+                    }
                 }
 
                 p {
                     line-height: 1.6rem;
                     font-size: .75rem;
+
                     @include md {
                         line-height: 1.4rem;
                         font-size: .675rem;
-                      }
+                    }
                 }
             }
         }
@@ -98,10 +109,11 @@
             top: -3px;
             left: -$gap * 8.5;
             font-size: 1.2rem;
+
             @include md {
                 top: -$gap * 2;
                 left: 0;
-              }
+            }
         }
     }
 
@@ -116,6 +128,7 @@
                 width: 50%;
                 flex-direction: column;
             }
+
             @include md {
                 width: 100%;
                 flex-direction: column;
@@ -130,11 +143,13 @@
             border: 1.2px solid darken($color-main-dark, 45);
             transition: border-color .4s;
             outline: none;
-box-shadow: none;
-border-radius: 0;
+            box-shadow: none;
+            border-radius: 0px;
+
             @include lg-md {
                 width: 300px;
             }
+
             @include md {
                 width: 100%;
             }
@@ -146,6 +161,7 @@ border-radius: 0;
                 @include lg-md {
                     width: 300px;
                 }
+
                 @include md {
                     width: 100%;
                 }
