--- a/assets/scss/sections/_contact.scss
+++ b/assets/scss/sections/_contact.scss
@@ -144,6 +144,7 @@
             transition: border-color .4s;
             outline: none;
             box-shadow: none;
+            appearance: none;
             border-radius: 0px;
 
             @include lg-md {
@@ -193,10 +194,12 @@
         .form-submit {
             width: 180px;
             height: 50px;
+            appearance: none;
             padding: 0 ($gap * 3);
             margin-left: 0;
             background-color: transparent;
             outline: none;
+            border-radius: 0px;
             text-transform: uppercase;
             border: 1.2px solid darken($color-main-dark, 45);
             transition: background-color .4s, color .4s;
