--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,22 +393,6 @@ ul {
           backface-visibility: hidden;
 }
 
-.header .navbar-list.show {
-  display: block;
-  position: absolute;
-  top: 60px;
-  left: -60px;
-  width: 100px;
-  text-align: center;
-  height: 100%;
-  z-index: 99;
-}
-
-.header .navbar-list.show .navbar-list__item:hover {
-  background: transparent;
-  border-bottom: 1px solid #c0301c;
-}
-
 .header .navbar-list__item {
   padding: 15px;
   border-radius: 7.5px;
@@ -417,10 +401,18 @@ ul {
   transition: background-color .3s;
   font-family: "Montserrat", serif;
   border: 1px solid transparent;
+  position: relative;
 }
 
-.header .navbar-list__item:hover {
-  background-color: #c0301c;
+.header .navbar-list__item:hover::after {
+  position: absolute;
+  content: "";
+  width: 182%;
+  z-index: -1;
+  height: 100%;
+  top: 0;
+  left: -31px;
+  background: rgba(192, 48, 28, 0.6);
 }
 
 .header-content {
@@ -1460,23 +1452,16 @@ ul {
     display: block;
   }
   .header .navbar-list {
-    position: relative;
-  }
-  .header .navbar-list::after {
     position: absolute;
-    content: "";
-    left: 5px;
-    top: -10px;
-    width: 100%;
-    height: 230px;
-    background: #5a160d;
-    z-index: -1;
-  }
-  .header .navbar-list {
-    display: none;
+    top: 52.5px;
+    left: -93px;
+    background: #55150c;
+    padding: 30px;
+    z-index: 99;
   }
   .header .navbar-list__item {
     padding: 4.28571px;
+    border-radius: 0;
   }
   .services-block {
     -ms-flex-wrap: wrap;
