--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -137,6 +137,9 @@
                       background:rgba($color-accent,.6);
                   }
                 }
+                &:hover{
+                    background:rgba($color-accent,.7);
+                }
             }
         }
     }
