--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,10 @@ ul {
   visibility: hidden;
 }
 
+.slick-slide {
+  outline: none;
+}
+
 @-webkit-keyframes preload-child__1 {
   0% {
     -webkit-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
@@ -412,10 +416,6 @@ ul {
   top: 0;
   left: -31px;
   background: rgba(192, 48, 28, 0.6);
-}
-
-.header .navbar-list__item:hover {
-  background: rgba(192, 48, 28, 0.7);
 }
 
 .header-content {
@@ -803,6 +803,10 @@ ul {
   color: #000;
 }
 
+.about-carusel .fa-chevron-right {
+  right: 7px;
+}
+
 .about-carusel .fa-chevron-left {
   left: 10px;
 }
@@ -1062,11 +1066,16 @@ ul {
   color: #e4e4e4;
   border: 1px solid #e4e4e4;
   margin: 0 5px;
+  outline: none;
 }
 
 .slick-active button {
   background: #c0301c !important;
   color: #c0301c !important;
+}
+
+.slick-active button:focus {
+  outline: none;
 }
 
 .contact {
@@ -1283,9 +1292,6 @@ ul {
     font-size: 1.5rem;
     line-height: 1.6rem;
   }
-  .about-carusel .fa-chevron-right {
-    right: 10px;
-  }
 }
 
 @media (min-width: 768px) {
@@ -1315,9 +1321,6 @@ ul {
     font-size: 3rem;
     line-height: 4rem;
   }
-  .about-carusel .fa-chevron-right {
-    right: 7px;
-  }
   .about-carusel__item {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
@@ -1329,9 +1332,6 @@ ul {
   .footer-content, .services-content, .work-content, .about-content, .paralax-content, .blog-content, .clients-content, .contact-content {
     padding-top: 60px;
     padding-bottom: 60px;
-  }
-  .about-carusel .fa-chevron-right {
-    right: 7px;
   }
 }
 
@@ -1365,9 +1365,6 @@ ul {
   }
   .header-content__subtitle {
     font-size: 1.5rem;
-  }
-  .about-carusel .fa-chevron-right {
-    right: 7px;
   }
 }
 
@@ -1494,9 +1491,6 @@ ul {
   }
   .about-content__text-item {
     padding: 15px 15px 0 15px;
-  }
-  .about-carusel .fa-chevron-right {
-    right: 10px;
   }
   .about-carusel__item {
     -webkit-box-flex: 0;
@@ -1628,7 +1622,7 @@ ul {
             flex: 0 0 100%;
   }
   .about-carusel .fa-chevron-right {
-    right: 9px;
+    right: 10px;
   }
   .about-carusel__item {
     -webkit-box-flex: 0;
