--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -122,21 +122,21 @@
                 position: relative;
                 @include md {
                     padding: $gap / 3.5;
-                    border-radius: 0;
+                    border-radius: 0; &:hover {
+
+                        &::after{
+                            position: absolute;
+                            content: "";
+                            width: 184%;
+                            z-index: -1;
+                            height: 100%;
+                            top: 0;left: -31px;
+                            background:rgba($color-accent,.6);
+                        }
+                      }
                 }
 
-                &:hover {
-
-                  &::after{
-                      position: absolute;
-                      content: "";
-                      width: 183%;
-                      z-index: -1;
-                      height: 100%;
-                      top: 0;left: -31px;
-                      background:rgba($color-accent,.6);
-                  }
-                }
+               
             }
         }
     }
