--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,6 +394,9 @@ ul {
 .header .navbar-list {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .header .navbar-list__item {
@@ -1287,11 +1290,6 @@ ul {
   .header .navbar-hamburger {
     display: none;
   }
-  .header .navbar-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 
 @media (min-width: 992px) {
@@ -1445,23 +1443,23 @@ ul {
     display: none;
     position: absolute;
     top: 52.5px;
-    left: -91.5px;
+    left: -85.5px;
+    width: 130px;
+    text-align: center;
     background: #55150c;
-    padding: 30px;
     z-index: 99;
   }
   .header .navbar-list__item {
-    padding: 4.28571px;
-    border-radius: 0;
+    padding: 7.5px;
   }
   .header .navbar-list__item:hover::after {
     position: absolute;
     content: "";
-    width: 184%;
+    width: 100%;
     z-index: -1;
     height: 100%;
     top: 0;
-    left: -31px;
+    left: 0;
     background: rgba(192, 48, 28, 0.6);
   }
   .services-block {
