--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -98,20 +98,21 @@
 
         &-list {
             backface-visibility: hidden;
+            display: flex;
+
             @include md {
                 display: none;
                 position: absolute;
                 top: $gap * 3.5;
-                left: -$gap * 6.1;
+                left: -$gap * 5.7;
+                width: 130px;
+                text-align: center;
                 background: darken($color-accent, 24);
-                padding: $gap *2;
                 z-index: 99;
             }
 
 
-            @include md-min {
-                display: flex;
-            }
+
 
             &__item {
                 padding: $gap;
@@ -120,23 +121,26 @@
                 font-family: $font-header;
                 border: 1px solid transparent;
                 position: relative;
-                @include md {
-                    padding: $gap / 3.5;
-                    border-radius: 0; &:hover {
 
-                        &::after{
+                @include md {
+                    padding: $gap / 2;
+
+                    &:hover {
+
+                        &::after {
                             position: absolute;
                             content: "";
-                            width: 184%;
+                            width: 100%;
                             z-index: -1;
                             height: 100%;
-                            top: 0;left: -31px;
-                            background:rgba($color-accent,.6);
+                            top: 0;
+                            left: 0;
+                            background: rgba($color-accent, .6);
                         }
-                      }
+                    }
                 }
 
-               
+
             }
         }
     }
